@@ -3,7 +3,7 @@
     <editor-bookmarks xmlns="http://www.netbeans.org/ns/editor-bookmarks/2" lastBookmarkId="0"/>
     <open-files xmlns="http://www.netbeans.org/ns/projectui-open-files/2">
         <group>
-            <file>file:/home/gepr/corp/td/ucsf/dev/pdc/pdc/src/pdc/PDC.java</file>
+            <file>file:/home/gepr/local/pdc/pdc/src/pdc/PDC.java</file>
         </group>
     </open-files>
 </project-private>
