@@ -29,13 +29,11 @@ dist.jar=${dist.dir}/pdc.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.commons-cli-1.3.1.jar=lib/commons-cli-1.3.1.jar
 file.reference.diffutils-1.2.1.jar=lib/diffutils-1.2.1.jar
 file.reference.ecj-23-util.jar=lib/ecj-23-util.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.commons-cli-1.3.1.jar}:\
     ${file.reference.ecj-23-util.jar}:\
     ${file.reference.diffutils-1.2.1.jar}
 # Space-separated list of extra javac options
